Fixed the background image issue on mobile

--- a/app/styles/_modules/_hero.scss
+++ b/app/styles/_modules/_hero.scss
@@ -14,7 +14,10 @@
 	}
 	background-blend-mode: darken;
 	color: $hero-font-color;
-	padding-top: em(340);
+	//padding-top: em(340);
+	width: 100%;
+  	height: 100%;
+  	min-height: 100vh;
 	position: relative;
 	text-align: center;
 	z-index: 0;
@@ -54,6 +57,10 @@
 		}
 		letter-spacing: 1px;
 		text-transform: uppercase;
+	}
+
+	.container {
+		@include position(absolute, null 0 0 0);
 	}
 
 	.overlay {
